--- a/SearchPaginationEnd/Pages/Category.cshtml
+++ b/SearchPaginationEnd/Pages/Category.cshtml
@@ -6,12 +6,22 @@
 @*Del 1 ===================================================*@
 <h1>Alla Products inom Category: @Model.CategoryName</h1>
 
+<h3>Page @Model.CurrentPage</h3>
+
+@*Search*@
+<form method="get">
+    <input asp-for="@Model.Q" />
+    <input type="hidden" asp-for="@Model.CategoryId" />
+    <input type="submit" value="Search"/>
+</form>
+
 <table class="table table-striped">
     <thead>
         <tr>
             <th scope="col">
                 Product Name
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="ProductName"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="asc"
@@ -20,6 +30,7 @@
 
                 </a>
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="ProductName"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="desc"
@@ -31,6 +42,7 @@
             <th scope="col">
                 Unit Price
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="UnitPrice"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="asc"
@@ -39,6 +51,7 @@
 
                 </a>
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="UnitPrice"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="desc"
@@ -50,6 +63,7 @@
             <th scope="col">
                 Units in Stock
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="UnitsInStock"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="asc"
@@ -58,6 +72,7 @@
 
                 </a>
                 <a asp-page="/Category"
+                   asp-route-q="@Model.Q"
                    asp-route-sortColumn="UnitsInStock"
                    asp-route-categoryId="@Model.CategoryId"
                    asp-route-sortOrder="desc"
@@ -73,15 +88,42 @@
     </thead>
     @*Del 4 ===================================================*@
     <tbody>
-        @foreach (var prod in Model.Products)
-        {
-            <tr>
-                <td>@prod.Name</td>
-                <td>@prod.UnitPrice</td>
-                <td>@prod.UnitInStock</td>
-                <td><a asp-page="/Product" asp-route-id="@prod.Id" class="btn btn-primary">View</a></td>
-            </tr>
-        }
+   @foreach (var prod in Model.Products)
+    {
+    <tr>
+        <td>@prod.Name</td>
+        <td>@prod.UnitPrice</td>
+        <td>@prod.UnitInStock</td>
+        <td><a asp-page="/Product" asp-route-id="@prod.Id" class="btn btn-primary">View</a></td>
+    </tr>
+    }
+    <tr>
+        <td>
+           @if (Model.CurrentPage != 1)
+            {
+                <a class="btn btn-secondary"
+                   asp-page="/Category" asp-route-categoryId="@Model.CategoryId"
+                   asp-route-q="@Model.Q"
+                   asp-route-sortColumn="@Model.SortColumn"
+                   asp-route-sortOrder="@Model.SortOrder"
+                   asp-route-pageNo="@(Model.CurrentPage-1)">
+                    Prev
+                </a>
+            }
+        </td>
+        <td></td>
+        <td></td>
+        <td>
+            <a class="btn btn-secondary"
+               asp-page="/Category" asp-route-categoryId="@Model.CategoryId"
+               asp-route-q="@Model.Q"
+               asp-route-sortColumn="@Model.SortColumn"
+               asp-route-sortOrder="@Model.SortOrder"
+               asp-route-pageNo="@(Model.CurrentPage+1)">
+                Next
+            </a>
+        </td>
+    </tr>
     </tbody>
 </table>
 
