--- a/SearchPaginationEnd/Pages/Category.cshtml
+++ b/SearchPaginationEnd/Pages/Category.cshtml
@@ -80,10 +80,7 @@
                     <i class="fa-solid fa-angle-down"></i>
                 </a>
             </th>
-            <th scope="col">
-                
-            </th>
-            <th></th>
+            <th scope="col"></th>
         </tr>
     </thead>
     @*Del 4 ===================================================*@
